2_yacc/2019211301 2019213688 池纪君/yacc/y.output
Grammar

    0 $accept: linelist $end

    1 linelist: line
    2         | linelist line

    3 line: expression CR

    4 expression: term
    5           | expression ADD term
    6           | expression SUB term

    7 term: frac
    8     | term MUL frac
    9     | term DIV frac

   10 frac: LEFT expression RIGHT
   11     | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ADD (258) 5
    SUB (259) 6
    MUL (260) 8
    DIV (261) 9
    CR (262) 3
    LEFT (263) 10
    RIGHT (264) 10
    NUM <dnum> (265) 11


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    linelist (12)
        on left: 1 2
        on right: 0 2
    line (13)
        on left: 3
        on right: 1 2
    expression <dnum> (14)
        on left: 4 5 6
        on right: 3 5 6 10
    term <dnum> (15)
        on left: 7 8 9
        on right: 4 5 6 8 9
    frac <dnum> (16)
        on left: 10 11
        on right: 7 8 9


State 0

    0 $accept: . linelist $end

    LEFT  shift, and go to state 1
    NUM   shift, and go to state 2

    linelist    go to state 3
    line        go to state 4
    expression  go to state 5
    term        go to state 6
    frac        go to state 7


State 1

   10 frac: LEFT . expression RIGHT

    LEFT  shift, and go to state 1
    NUM   shift, and go to state 2

    expression  go to state 8
    term        go to state 6
    frac        go to state 7


State 2

   11 frac: NUM .

    $default  reduce using rule 11 (frac)


State 3

    0 $accept: linelist . $end
    2 linelist: linelist . line

    $end  shift, and go to state 9
    LEFT  shift, and go to state 1
    NUM   shift, and go to state 2

    line        go to state 10
    expression  go to state 5
    term        go to state 6
    frac        go to state 7


State 4

    1 linelist: line .

    $default  reduce using rule 1 (linelist)


State 5

    3 line: expression . CR
    5 expression: expression . ADD term
    6           | expression . SUB term

    ADD  shift, and go to state 11
    SUB  shift, and go to state 12
    CR   shift, and go to state 13


State 6

    4 expression: term .
    8 term: term . MUL frac
    9     | term . DIV frac

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 4 (expression)


State 7

    7 term: frac .

    $default  reduce using rule 7 (term)


State 8

    5 expression: expression . ADD term
    6           | expression . SUB term
   10 frac: LEFT expression . RIGHT

    ADD    shift, and go to state 11
    SUB    shift, and go to state 12
    RIGHT  shift, and go to state 16


State 9

    0 $accept: linelist $end .

    $default  accept


State 10

    2 linelist: linelist line .

    $default  reduce using rule 2 (linelist)


State 11

    5 expression: expression ADD . term

    LEFT  shift, and go to state 1
    NUM   shift, and go to state 2

    term  go to state 17
    frac  go to state 7


State 12

    6 expression: expression SUB . term

    LEFT  shift, and go to state 1
    NUM   shift, and go to state 2

    term  go to state 18
    frac  go to state 7


State 13

    3 line: expression CR .

    $default  reduce using rule 3 (line)


State 14

    8 term: term MUL . frac

    LEFT  shift, and go to state 1
    NUM   shift, and go to state 2

    frac  go to state 19


State 15

    9 term: term DIV . frac

    LEFT  shift, and go to state 1
    NUM   shift, and go to state 2

    frac  go to state 20


State 16

   10 frac: LEFT expression RIGHT .

    $default  reduce using rule 10 (frac)


State 17

    5 expression: expression ADD term .
    8 term: term . MUL frac
    9     | term . DIV frac

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 5 (expression)


State 18

    6 expression: expression SUB term .
    8 term: term . MUL frac
    9     | term . DIV frac

    MUL  shift, and go to state 14
    DIV  shift, and go to state 15

    $default  reduce using rule 6 (expression)


State 19

    8 term: term MUL frac .

    $default  reduce using rule 8 (term)


State 20

    9 term: term DIV frac .

    $default  reduce using rule 9 (term)
